datasets/dataset_txt/mitmproxy/mitmproxy_276.txt
rajkotraja commented on 8 Jun 2018
i am getting following error when i try to install mitmproxy on a Ubuntu 16.04 system
root@ubuntu-s-1vcpu-1gb-blr1-01:/mitmproxy# . venv/bin/activate
(venv) root@ubuntu-s-1vcpu-1gb-blr1-01:/mitmproxy# mitmdump --version
Traceback (most recent call last):
File "/root/mitmproxy/venv/bin/mitmdump", line 11, in
load_entry_point('mitmproxy', 'console_scripts', 'mitmdump')()
File "/root/mitmproxy/venv/lib/python3.5/site-packages/pkg_resources/init.py", line 476, in load_entry_point
return get_distribution(dist).load_entry_point(group, name)
File "/root/mitmproxy/venv/lib/python3.5/site-packages/pkg_resources/init.py", line 2700, in load_entry_point
return ep.load()
File "/root/mitmproxy/venv/lib/python3.5/site-packages/pkg_resources/init.py", line 2318, in load
return self.resolve()
File "/root/mitmproxy/venv/lib/python3.5/site-packages/pkg_resources/init.py", line 2324, in resolve
module = import(self.module_name, fromlist=['name'], level=0)
File "/root/mitmproxy/mitmproxy/tools/main.py", line 101
server: typing.Any = None
^
SyntaxError: invalid syntax